--- a/index.html
+++ b/index.html
@@ -37,7 +37,34 @@
           <a href="#contacts">Контакты</a>
         </li>
       </ul>
+      <div class="burger-icon" id="burger-icon">
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+      </div>
     </header>
+    <div class="side-menu" id="side-menu">
+      <ul>
+        <li>
+          <a href="#main">Главная</a>
+        </li>
+        <li>
+          <a href="#about">О Нас</a>
+        </li>
+        <li>
+          <a href="#types">Виды помощи</a>
+        </li>
+        <li>
+          <a href="#practice">Практика</a>
+        </li>
+        <li>
+          <a href="#team">Команда</a>
+        </li>
+        <li>
+          <a href="#contacts">Контакты</a>
+        </li>
+      </ul>
+    </div>
     <div class="main" id="main">
       <div class="container main_content">
         <h1 class="hidden">ПКА "НЕЗАВИСИМАЯ"</h1>
@@ -77,8 +104,8 @@
     <div class="type" id="types">
       <div class="container">
         <h2>Виды оказываемой юридической помощи</h2>
-        <div class="type_cards hidden">
-          <div class="type_card">
+        <div class="type_cards">
+          <div class="type_card hidden">
             <img src="./images/basik-kinds-1.jpg" alt="typeImage" />
             <h3>Адвокат по уголовным делам</h3>
             <ul>
@@ -92,7 +119,7 @@
               <li>Участие в качестве представителя</li>
             </ul>
           </div>
-          <div class="type_card">
+          <div class="type_card hidden">
             <img src="./images/grzhdan.png" alt="typeImage" />
             <h3>Адвокат по гражданским делам</h3>
             <ul>
@@ -107,7 +134,7 @@
               <li>Участие в качестве представителя</li>
             </ul>
           </div>
-          <div class="type_card">
+          <div class="type_card hidden">
             <img src="./images/admindela.png" alt="typeImage" />
             <h3>Адвокат по административным делам</h3>
             <ul>
@@ -184,7 +211,7 @@
               </p>
             </div>
           </div>
-          <div class="team_card reverse hidden" style="top: -60px">
+          <div class="team_card reverse hidden">
             <div class="avatar avatar2"></div>
             <div class="personInfo">
               <h4>АЛЕКСЕЕВА Ольга Александровна</h4>
